# Personal-finance-tracker

./: CMakeLists.txt
src/: main.cpp  pft  transactions.txt
